2011-05-30  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* dtable.cc (dtable::select_write): Add missing argument to
	debug_printf.

	* fhandler.cc (fhandler_base_overlapped::setup_overlapped): Explicitly
	set io_pending to false.
	(fhandler_base_overlapped::has_ongoing_io): Call GetOverlappedResult
	to force completion of I/O.
	(fhandler_base_overlapped::wait_overlapped): Rewrite to correctly deal
	with nonblocking reads and to make more race proof.
	(fhandler_base_overlapped::raw_write): Deal with new enum values.
	(fhandler_base_overlapped::raw_read): Ditto.  Don't deal with ongoing
	I/O here since it makes no sense in the read context.
	* fhandler.h (enum wait_return): Add overlapped_unknown,
	overlapped_nonblocking_no_data.
	* pipe.cc (pipe): Add debugging output.

2011-05-30  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* dll_init.cc (dll_list::append): Eliminate increment of unused tot
	variable.
	* dll_init.h (dll_list::tot): Delete.
	(dll_list::populate_all_deps): Delete undefined function.

	* fhandler.cc (fhandler_base_overlapped::wait_overlapped): Move EPIPE
	handling under error condition.

2011-05-30  Ryan Johnson  <ryan.johnson@cs.utoronto.ca>

	* dll_init.cc (reserve_upto): Remove.
	(release_upto): Ditto.
	(dll_list::reserve_space): New function to reserve space needed by
	DLL_LOAD dlls early in the fork process.
	(dll_list::load_after_fork): Rewrite to use recursion to
	track reservations it makes while trying to make dlls land where they
	belong.
	(dll_list::load_after_fork_impl): New function used by load_after_fork.
	(dll_list::alloc): Initialize image base field.
	* dll_init.h (dll_list::prefered_base): New field.
	(dll_list::reserve_space): Declare new function.
	(dll_list::load_after_fork): Declare new function.
	* fork.cc (frok::child): call dll_list::reserve_space early, so we can
	retry if it fails.

2011-05-30  Tor Perkins  <cygwin@noid.net>

	* fhandler_termios.cc (fhandler_termios::bg_check): Do not return EIO